<resources>
    <string name="app_name">Gallery</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="action_Rotate_left">Rotate Left</string>
    <string name="action_Rotate_Right">Rotate Right</string>
    <string name="action_details">Details</string>
</resources>
