<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_edit"
        android:icon="@mipmap/ic_setting_white"
        android:orderInCategory="100"
        android:title="@string/action_edit"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete"
        android:icon="@mipmap/ic_setting_white"
        android:orderInCategory="100"
        android:title="@string/action_delete"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_Rotate_Right"
        android:icon="@mipmap/ic_setting_white"
        android:orderInCategory="100"
        android:title="@string/action_Rotate_Right"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_Rotate_left"
        android:icon="@mipmap/ic_setting_white"
        android:orderInCategory="100"
        android:title="@string/action_Rotate_left"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_details"
        android:icon="@mipmap/ic_setting_white"
        android:orderInCategory="100"
        android:title="@string/action_details"
        app:showAsAction="never" />
</menu>